# map-reduce

./: CMakeLists.txt  mappermean.cpp  mappervariance.cpp  reducermean.cpp  reducervariance.cpp  run_locally.sh
.github/workflows/: release.yml
